# darlog-py23

./: .gitattributes  .gitignore  Pipfile  README.md  build.bat  pyproject.toml  setup.cfg  setup.py  upload-release.bat  upload-test.bat
src/darlog/py23/: __init__.py
src/darlog_py23/: __dataclass_attrs.py  __init__.py  __str.py
