# This section is the only one required for build.
# Any others provided in docs are just an endorsement to use `pyproject.toml`
# https://setuptools.pypa.io/en/latest/build_meta.html
# https://pypa-build.readthedocs.io/en/latest/

# `setuptools` seem to support the modern build system since v43
# (at least, it is the lowest major version with which build succeeds).

[build-system]
requires = [
    "setuptools>=43",
    "darlog-pypi>=1.0.0",
]
build-backend = "setuptools.build_meta"
