; https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

; https://setuptools.pypa.io/en/latest/references/keywords.html

; List-type properties:
;prop = val1, val2
;prop =
;    val1
;    val2

[metadata]
keywords = 2to3, 3to2, six, compatibility, wrapper

; https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
; https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
; Four fields work in conjunction:
; - in [options]:
;   - `package_dir`
;   - `packages`
; - in [options.packages.find]:
;   - `where`
;   - either `include` or `exclude`
; DRL: yes, indeed, we need `package_dir` written exactly this way,
; with the '=' sign on both lines.
; It means it's a dict property with '' key set to 'src':
package_dir=
    =src

; https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#custom-discovery
; `find:` = `find_packages()`
; `find_namespace:` = `find_namespace_packages()`
; We use namespace here since the module extends `darlog` namespace:
; https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#finding-namespace-packages
packages = find_namespace:

python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, <4

; https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#declaring-required-dependency
;install_requires =
;    pytz
;    tzlocal ==1.1

; https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
; `include_package_data` should NOT be enabled, if we explicitly
; specify masks with `[options.package_data]` below:
;include_package_data = True

[options.packages.find]
where=src
;include = darlog*
;exclude =
;    examples*
;    tools*
;    docs*
;    darlog.tests*

[options.package_data]
* = *.txt, *.rst, *.md

;[options.exclude_package_data]
;* = README.md

[bdist_wheel]
universal=1
